src/render/ui/Transition/Transition.css
.TransitionWrap {
  position: relative;
  width: inherit;
  height: inherit;
}
.TransitionWrap > * {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  opacity: 0;
  pointer-events: none;
  overflow: hidden;
  transition: all 0.25s cubic-bezier(.65,-0.3,0.3,1.3);
}
.TransitionWrap > *.open {
  opacity: 1;
  transform: translateZ(0px);
  pointer-events: all;
}
.TransitionWrap > *:first-child {
  z-index: 72;
}
.TransitionWrap > *:last-child {
  z-index: 71;
}
.TransitionWrap > *:not(.open):first-child {
  transform: scale(1.1) translateZ(0px);
  opacity: 0;
}
.TransitionWrap > *:not(.open):last-child {
  transform: scale(0.9) translateZ(0px);
  opacity: 0;
}

